- Testing v2
todo:
- Clean up code
- Docker